:bug: scrollbar > fix zindex

--- a/components/scrollbar/styles.module.scss
+++ b/components/scrollbar/styles.module.scss
@@ -11,6 +11,7 @@
     max-height: 60vh;
     width: 20px;
     transform: translate3d(0, -50%, 0);
+    z-index: 100;
 
     div {
         position: relative;
